--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -1,8 +1,9 @@
 ---
 title: Frontpage
 ---
+
 {{#extend "layouts/pages"}}
-  {{#content "content"}}
-    <h1>This is the Frontpage</h1>
-  {{/content}}
+{{#content "body"}}
+  <h1>This is the Frontpage</h1>
+{{/content}}
 {{/extend}}
