--- a/src/html/components/forms.hbs
+++ b/src/html/components/forms.hbs
@@ -2,206 +2,164 @@
 title: Forms
 description: Users input things. The server gets things.
 ---
+
 {{#extend "layouts/components"}}
-  {{#content "content"}}
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Text Inputs</h2>
-        <p class="sg-article__description">Text, password, email, etc.</p>
-      </header>
+{{#content "body"}}
 
-      <div class="sg-article__body sg-article__body--light">
-        <form>
-          <label for="text" class="u-sr-only">Text input</label>
-          <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--text">
+  {{#embed "layouts/article" title="Text Inputs" body-class="light"}}
+  {{#content "body"}}
+    <label for="text" class="u-sr-only">Text input</label>
+    <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--text">
 
-          <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
-          <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--text" disabled>
+    <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
+    <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--text" disabled>
 
-          <label for="email" class="u-sr-only">E-mail input</label>
-          <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--text">
+    <label for="email" class="u-sr-only">E-mail input</label>
+    <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--text">
 
-          <label for="password" class="u-sr-only">Password input</label>
-          <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--text">
+    <label for="password" class="u-sr-only">Password input</label>
+    <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--text">
 
-          <label for="search" class="u-sr-only">Search input</label>
-          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--text c-form-field--icon">
+    <label for="search" class="u-sr-only">Search input</label>
+    <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--text c-form-field--icon">
 
-          <label for="url" class="u-sr-only">URL input</label>
-          <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--text">
+    <label for="url" class="u-sr-only">URL input</label>
+    <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--text">
 
-          <label for="number" class="u-sr-only">Number input</label>
-          <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--text">
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Text Inputs (Dark)</h2>
-        <p class="sg-article__description">Text, password, email, etc.</p>
-      </header>
-
-      <div class="sg-article__body sg-article__body--dark">
-        <form>
-          <label for="text" class="u-sr-only">Text input</label>
-          <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--dark c-form-field--text">
-
-          <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
-          <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--dark c-form-field--text" disabled>
-
-          <label for="email" class="u-sr-only">E-mail input</label>
-          <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--dark c-form-field--text">
-
-          <label for="password" class="u-sr-only">Password input</label>
-          <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--dark c-form-field--text">
-
-          <label for="search" class="u-sr-only">Search input</label>
-          <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--dark c-form-field--text c-form-field--icon">
-
-          <label for="url" class="u-sr-only">URL input</label>
-          <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--dark c-form-field--text">
-
-          <label for="number" class="u-sr-only">Number input</label>
-          <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--dark c-form-field--text">
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Textarea</h2>
-        <p class="sg-article__description">Multi-line inputs</p>
-      </header>
-
-      <div class="sg-article__body sg-article__body--light">
-        <form>
-          <label for="textarea" class="u-sr-only">Textarea</label>
-          <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--textarea"></textarea>
-
-          <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
-          <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--textarea" disabled></textarea>
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Textarea (dark)</h2>
-        <p class="sg-article__description">Multi-line inputs</p>
-      </header>
-
-      <div class="sg-article__body sg-article__body--dark">
-        <form>
-          <label for="textarea" class="u-sr-only">Textarea</label>
-          <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea"></textarea>
-
-          <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
-          <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea" disabled></textarea>
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Select</h2>
-      </header>
-
-      <div class="sg-article__body sg-article__body--light">
-        <form>
-          <label for="select-1" class="u-sr-only">Select input</label>
-          <select id="select-1" class="c-form-field c-form-field--select c-form-field--icon">
-            <option value="select-1">Option 1</option>
-            <option value="select-2">Option 2</option>
-            <option value="select-3">Option 3</option>
-            <option value="select-4">Option 4</option>
-          </select>
-
-          <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-          <select id="select-2" class="c-form-field c-form-field--select c-form-field--icon" disabled>
-            <option value="select-1">Option 1</option>
-            <option value="select-2">Option 2</option>
-            <option value="select-3">Option 3</option>
-            <option value="select-4">Option 4</option>
-          </select>
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Select (Dark)</h2>
-      </header>
-
-      <div class="sg-article__body sg-article__body--dark">
-        <form>
-          <label for="select-1" class="u-sr-only">Select input</label>
-          <select id="select-1" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon">
-            <option value="select-1">Option 1</option>
-            <option value="select-2">Option 2</option>
-            <option value="select-3">Option 3</option>
-            <option value="select-4">Option 4</option>
-          </select>
-
-          <label for="select-2" class="u-sr-only">Select input (disabled)</label>
-          <select id="select-2" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon" disabled>
-            <option value="select-1">Option 1</option>
-            <option value="select-2">Option 2</option>
-            <option value="select-3">Option 3</option>
-            <option value="select-4">Option 4</option>
-          </select>
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Radio</h2>
-      </header>
-
-      <div class="sg-article__body">
-        <form>
-          <input type="radio" name="radio" value="radio-1" id="radio-1" class="c-form-choice c-form-choice--radio" checked>
-          <label for="radio-1">Radio #1</label>
-
-          <input type="radio" name="radio" value="radio-2" id="radio-2" class="c-form-choice c-form-choice--radio">
-          <label for="radio-2">Radio #2</label>
-
-          <input type="radio" name="radio" value="radio-3" id="radio-3" class="c-form-choice c-form-choice--radio" disabled>
-          <label for="radio-3">Radio #3 (disabled)</label>
-
-          <input type="radio" name="radio" value="radio-4" id="radio-4" class="c-form-choice c-form-choice--radio">
-          <label for="radio-4">Radio #4</label>
-
-          <input type="radio" name="radio2" value="radio" id="radio2" class="c-form-choice c-form-choice--radio" disabled checked>
-          <label for="radio2">Radio (checked, disabled)</label>
-        </form>
-      </div>
-    </article>
-
-    <article class="sg-article">
-      <header class="sg-article__header">
-        <h2 class="sg-article__title">Checkbox</h2>
-      </header>
-
-      <div class="sg-article__body">
-        <form>
-          <input type="checkbox" name="checkbox" value="checkbox-1" id="checkbox-1" class="c-form-choice c-form-choice--checkbox" checked>
-          <label for="checkbox-1">Checkbox #1 (checked)</label>
-
-          <input type="checkbox" name="checkbox" value="checkbox-2" id="checkbox-2" class="c-form-choice c-form-choice--checkbox">
-          <label for="checkbox-2">Checkbox #2</label>
-
-          <input type="checkbox" name="checkbox" value="checkbox-3" id="checkbox-3" class="c-form-choice c-form-choice--checkbox" disabled>
-          <label for="checkbox-3">Checkbox #3 (disabled)</label>
-
-          <input type="checkbox" name="checkbox" value="checkbox-4" id="checkbox-4" class="c-form-choice c-form-choice--checkbox">
-          <label for="checkbox-4">Checkbox #4</label>
-
-          <input type="checkbox" name="checkbox" value="checkbox-5" id="checkbox-5" class="c-form-choice c-form-choice--checkbox" disabled checked>
-          <label for="checkbox-5">Checkbox #5 (checked, disabled)</label>
-        </form>
-      </div>
-    </article>
+    <label for="number" class="u-sr-only">Number input</label>
+    <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--text">
   {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Text Inputs (dark)" body-class="dark"}}
+  {{#content "body"}}
+    <label for="text" class="u-sr-only">Text input</label>
+    <input type="text" id="text" placeholder="Text" class="c-form-field c-form-field--dark c-form-field--text">
+
+    <label for="text-disabled" class="u-sr-only">Text input (disabled)</label>
+    <input type="text" id="text-disabled" placeholder="Text (disabled)" class="c-form-field c-form-field--dark c-form-field--text" disabled>
+
+    <label for="email" class="u-sr-only">E-mail input</label>
+    <input type="email" id="email" placeholder="E-mail" class="c-form-field c-form-field--dark c-form-field--text">
+
+    <label for="password" class="u-sr-only">Password input</label>
+    <input type="password" id="password" placeholder="Password" class="c-form-field c-form-field--dark c-form-field--text">
+
+    <label for="search" class="u-sr-only">Search input</label>
+    <input type="search" id="search" placeholder="Search" class="c-form-field c-form-field--dark c-form-field--text c-form-field--icon">
+
+    <label for="url" class="u-sr-only">URL input</label>
+    <input type="url" id="url" placeholder="URL" class="c-form-field c-form-field--dark c-form-field--text">
+
+    <label for="number" class="u-sr-only">Number input</label>
+    <input type="number" id="number" placeholder="7" class="c-form-field c-form-field--dark c-form-field--text">
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Textarea" body-class="light"}}
+  {{#content "body"}}
+    <label for="textarea" class="u-sr-only">Textarea</label>
+    <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--textarea"></textarea>
+
+    <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
+    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--textarea" disabled></textarea>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Textarea (dark)" body-class="dark"}}
+  {{#content "body"}}
+    <label for="textarea" class="u-sr-only">Textarea</label>
+    <textarea id="textarea" placeholder="Textarea" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea"></textarea>
+
+    <label for="textarea-disabled" class="u-sr-only">Textarea (disabled)</label>
+    <textarea id="textarea-disabled" placeholder="Textarea (disabled)" rows="5" class="c-form-field c-form-field--dark c-form-field--textarea" disabled></textarea>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Select" body-class="light"}}
+  {{#content "body"}}
+    <label for="select-1" class="u-sr-only">Select input</label>
+    <select id="select-1" class="c-form-field c-form-field--select c-form-field--icon">
+      <option value="select-1">Option 1</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+
+    <label for="select-2" class="u-sr-only">Select input (disabled)</label>
+    <select id="select-2" class="c-form-field c-form-field--select c-form-field--icon" disabled>
+      <option value="select-1">Option 1</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Select (dark)" body-class="dark"}}
+  {{#content "body"}}
+    <label for="select-1" class="u-sr-only">Select input</label>
+    <select id="select-1" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon">
+      <option value="select-1">Option 1</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+
+    <label for="select-2" class="u-sr-only">Select input (disabled)</label>
+    <select id="select-2" class="c-form-field c-form-field--dark c-form-field--select c-form-field--icon" disabled>
+      <option value="select-1">Option 1</option>
+      <option value="select-2">Option 2</option>
+      <option value="select-3">Option 3</option>
+      <option value="select-4">Option 4</option>
+    </select>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Radio"}}
+  {{#content "body"}}
+    <input type="radio" name="radio" value="radio-1" id="radio-1" class="c-form-choice c-form-choice--radio" checked>
+    <label for="radio-1">Radio #1</label>
+
+    <input type="radio" name="radio" value="radio-2" id="radio-2" class="c-form-choice c-form-choice--radio">
+    <label for="radio-2">Radio #2</label>
+
+    <input type="radio" name="radio" value="radio-3" id="radio-3" class="c-form-choice c-form-choice--radio" disabled>
+    <label for="radio-3">Radio #3 (disabled)</label>
+
+    <input type="radio" name="radio" value="radio-4" id="radio-4" class="c-form-choice c-form-choice--radio">
+    <label for="radio-4">Radio #4</label>
+
+    <input type="radio" name="radio2" value="radio" id="radio2" class="c-form-choice c-form-choice--radio" disabled checked>
+    <label for="radio2">Radio (checked, disabled)</label>
+  {{/content}}
+  {{/embed}}
+
+
+  {{#embed "layouts/article" title="Checkbox"}}
+  {{#content "body"}}
+    <input type="checkbox" name="checkbox" value="checkbox-1" id="checkbox-1" class="c-form-choice c-form-choice--checkbox" checked>
+    <label for="checkbox-1">Checkbox #1 (checked)</label>
+
+    <input type="checkbox" name="checkbox" value="checkbox-2" id="checkbox-2" class="c-form-choice c-form-choice--checkbox">
+    <label for="checkbox-2">Checkbox #2</label>
+
+    <input type="checkbox" name="checkbox" value="checkbox-3" id="checkbox-3" class="c-form-choice c-form-choice--checkbox" disabled>
+    <label for="checkbox-3">Checkbox #3 (disabled)</label>
+
+    <input type="checkbox" name="checkbox" value="checkbox-4" id="checkbox-4" class="c-form-choice c-form-choice--checkbox">
+    <label for="checkbox-4">Checkbox #4</label>
+
+    <input type="checkbox" name="checkbox" value="checkbox-5" id="checkbox-5" class="c-form-choice c-form-choice--checkbox" disabled checked>
+    <label for="checkbox-5">Checkbox #5 (checked, disabled)</label>
+  {{/content}}
+  {{/embed}}
+
+{{/content}}
 {{/extend}}
