--- a/src/html/partials/layouts/pages.hbs
+++ b/src/html/partials/layouts/pages.hbs
@@ -18,7 +18,7 @@
     {{> "styleguide/nav"}}
   {{/if}}
 
-    {{{block "content"}}}
+    {{{block "body"}}}
 
     <!-- JS -->
     <script src="{{rel}}js/scripts.js"></script>
