Add toggle functionality to list

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -20,6 +20,8 @@ Prefixes for CSS classes
  u- : Utility
 js- : JavaScript Hook
 
+is- / has- : State
+
 
 Naming convention for CSS classes
 ----------------------------------------
