--- a/src/html/partials/includes/list-domain-inactive.hbs
+++ b/src/html/partials/includes/list-domain-inactive.hbs
@@ -1,16 +1,16 @@
-<li class="c-list__item c-list__item--inactive">
+<li class="c-list__item c-list__item--inactive  js-list-item">
   <div class="c-list__group c-list__group--title">
     <a href="#" class="c-list__link">
       <h3 class="c-list__title">awesome-pictures.com</h3>
     </a>
 
-    <button class="c-button c-button--no-bg  c-list__more-button">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
-      <span class="c-button__text u-sr-only">Show Actions</span>
+    <button class="c-list-toggle-button js-toggle-button">
+      <svg class="c-list-toggle-button__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+      <span class="u-sr-only">Show Actions</span>
     </button>
   </div>
 
-  <div class="c-list__group c-list__group--actions">
+  <div class="c-list__group c-list__group--actions  js-toggle-panel">
     <div class="c-list__action-group">
       <input type="checkbox" id="inactive" class="c-form-choice c-form-choice--checkbox  c-list__checkbox">
       <label for="inactive">Aktiv</label>
