--- a/src/css/components/_list.scss
+++ b/src/css/components/_list.scss
@@ -62,6 +62,10 @@
   align-items: stretch;
   margin-top: 0.6em;
 
+  @media (max-width: $break-sm-max) {
+    display: none;
+  }
+
   @media (min-width: $break-sm-min) {
     flex-direction: row;
     align-items: center;
@@ -69,6 +73,10 @@
 
   @media (min-width: $break-md-min) {
     margin-top: 0;
+  }
+
+  &.is-visible {
+    display: flex;
   }
 }
 
@@ -105,6 +113,12 @@
   overflow: hidden;
 
   text-decoration: none;
+
+  outline: none;
+
+  &:focus {
+    background-color: darken($color-white, 15%);
+  }
 }
 
 
@@ -137,11 +151,38 @@
 
 // More button
 
-.c-list__more-button {
-  @media (min-width: $break-sm-min) {
+.c-list-toggle-button {
+  padding: 0.6em;
+
+  background: none;
+  border: none;
+  outline: none;
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: darken($color-white, 15%);
+  }
+
+  &:active {
+    background-color: darken($color-white, 25%);
+  }
+
+  @media (min-width: $break-md-min) {
     display: none;
   }
 }
+
+  .c-list-toggle-button__icon {
+    display: block;
+    width: 1.6em;
+    height: 1.6em;
+
+    .c-list-toggle-button.is-active & {
+      transform: rotate(180deg);
+    }
+  }
 
 
 // Checkbox
