--- a/src/css/components/_forms.scss
+++ b/src/css/components/_forms.scss
@@ -145,6 +145,8 @@
     background-position: left center;
     background-size: 1em;
     background-repeat: no-repeat;
+
+    border-radius: 0.2em;
   }
 
   &:disabled + label {
@@ -178,6 +180,10 @@
   &:disabled:checked + label {
     background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-silver}"><path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/></svg>');
   }
+
+  &:focus + label {
+    box-shadow: 0 0 0 0.1em $color-shadow;
+  }
 }
 
 .c-form-choice--checkbox {
@@ -195,6 +201,10 @@
 
   &:disabled:checked + label {
     background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#{$color-silver}"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>');
+  }
+
+  &:focus + label {
+    box-shadow: 0 0 0 0.1em $color-shadow;
   }
 }
 
