--- a/src/html/partials/includes/list-alias-inactive.hbs
+++ b/src/html/partials/includes/list-alias-inactive.hbs
@@ -1,7 +1,13 @@
 <li class="c-list__item  is-inactive  js-list-item">
   <div class="c-list__group c-list__group--title">
     <a href="#" class="c-list__link">
-      <h3 class="c-list__title">awesome-pictures-unbelievable-long-domain.com</h3>
+      <h3 class="c-list__title c-list__title--multiline">
+        <span>webmaster@awesome-pictures.com</span>
+        <span>
+          <svg class="c-list__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+          info@awesome-pictures.com
+        </span>
+      </h3>
     </a>
 
     <button class="c-list-toggle-button js-toggle-button">
@@ -18,30 +24,13 @@
 
     <div class="c-list__action-group">
       <button class="c-button  c-list__button">
-        <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
-        <span class="c-button__text u-sr-only-sm u-sr-only-md">Aliases</span>
-      </button>
-
-      <button class="c-button  c-list__button">
-        <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
-        <span class="c-button__text u-sr-only-sm u-sr-only-md">Mailing Lists</span>
-      </button>
-
-      <button class="c-button  c-list__button">
-        <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#forward"/></svg>
-        <span class="c-button__text u-sr-only-sm u-sr-only-md">Forwards</span>
-      </button>
-    </div>
-
-    <div class="c-list__action-group">
-      <button class="c-button  c-list__button">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#settings"/></svg>
-        <span class="c-button__text u-sr-only-sm u-sr-only-md u-sr-only-lg">Settings</span>
+        <span class="c-button__text u-sr-only-md">Settings</span>
       </button>
 
       <button class="c-button  c-list__button">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#delete"/></svg>
-        <span class="c-button__text u-sr-only-sm u-sr-only-md u-sr-only-lg">Delete</span>
+        <span class="c-button__text u-sr-only-md">Delete</span>
       </button>
     </div>
   </div>
