--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -55,6 +55,7 @@ Naming convention for CSS classes
 // COMPONENTS
 @import 'components/box';
 @import 'components/buttons';
+@import 'components/footer';
 @import 'components/forms';
 @import 'components/list';
 @import 'components/logo';
