--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -13,6 +13,7 @@
   height: 2.5em;
   padding: 0 1em;
   vertical-align: middle;
+  white-space: nowrap;
 
   background-color: $color-shadow;
 
@@ -39,7 +40,7 @@
   }
 
   @media (min-width: $break-md-min) {
-    height: 2em;
+    height: 2.2222222222em;
     padding: 0 0.8em;
 
     font-size: 0.9em;
@@ -105,3 +106,56 @@ _::-moz-progress-bar, body:last-child button.c-button {
     margin-left: 0.6em;
   }
 }
+
+
+
+// ICON BUTTON
+// =====================================
+
+.c-icon-button {
+  display: inline-flex;
+  align-items: center;
+  height: 2.5em;
+  padding: 0 1em;
+
+  background: none;
+
+  border: none;
+  border-radius: 0.2em;
+  outline: none;
+
+  font-size: 1em;
+  color: $color-shadow;
+
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: darken($color-white, 15%);
+  }
+
+  &:active {
+    background-color: darken($color-white, 25%);
+  }
+
+  @media (min-width: $break-md-min) {
+    height: 2em;
+    padding: 0 0.8em;
+  }
+}
+
+  .c-icon-button__icon {
+    height: 1.6em;
+    width: 1.6em;
+
+    fill: currentColor;
+
+    @media (min-width: $break-md-min) {
+      height: 1.4em;
+      width: 1.4em;
+    }
+
+    .c-icon-button--active-rotate.is-active & {
+      transform: rotate(180deg);
+    }
+  }
