--- a/src/html/partials/includes/list-domain-inactive.hbs
+++ b/src/html/partials/includes/list-domain-inactive.hbs
@@ -4,8 +4,8 @@
       <h3 class="c-list__title">awesome-pictures-unbelievable-long-domain.com</h3>
     </a>
 
-    <button class="c-list-toggle-button js-toggle-button">
-      <svg class="c-list-toggle-button__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <button class="c-icon-button c-icon-button--active-rotate  c-list__toggle-button  js-toggle-button">
+      <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
       <span class="u-sr-only">Show Actions</span>
     </button>
   </div>
