--- a/src/css/base/_utilities.scss
+++ b/src/css/base/_utilities.scss
@@ -80,3 +80,43 @@
     @include sr-only;
   }
 }
+
+
+
+// HIDE for EVERYONE
+// (even screen readers)
+// =====================================
+
+.u-hide {
+  display: none !important;
+}
+
+.u-hide-xs {
+  @media (max-width: $break-xs-max) {
+    display: none !important;
+  }
+}
+
+.u-hide-sm {
+  @media (min-width: $break-sm-min) and (max-width: $break-sm-max) {
+    display: none !important;
+  }
+}
+
+.u-hide-md {
+  @media (min-width: $break-md-min) and (max-width: $break-md-max) {
+    display: none !important;
+  }
+}
+
+.u-hide-lg {
+  @media (min-width: $break-lg-min) and (max-width: $break-lg-max) {
+    display: none !important;
+  }
+}
+
+.u-hide-xl {
+  @media (min-width: $break-xl-min) {
+    display: none !important;
+  }
+}
