--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -13,6 +13,9 @@
 
   background-color: $color-shadow;
 
+  // Component size
+  font-size: 1rem;
+
   @media (min-width: $break-md-min) {
     height: 4em;
   }
