--- a/src/css/components/_forms.scss
+++ b/src/css/components/_forms.scss
@@ -58,6 +58,12 @@
 }
 
 
+.c-form-field--no-margin {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
 
 // TEXT
 // =====================================
