--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -52,11 +52,15 @@ Naming convention for CSS classes
 // LAYOUT
 
 
-// COMPONENTS
-@import 'components/box';
+// BASE COMPONENTS
 @import 'components/buttons';
-@import 'components/footer';
 @import 'components/forms';
+
+
+// COMPONENTS
+@import 'components/action-bar';
+@import 'components/box';
+@import 'components/footer';
 @import 'components/list';
 @import 'components/logo';
 
