--- a/src/css/components/_list.scss
+++ b/src/css/components/_list.scss
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0.8rem 0.6rem;
+  padding: 0.6rem;
 
   &::after {
     content: '';
