Add side navigation

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -63,6 +63,7 @@ Naming convention for CSS classes
 @import 'components/footer';
 @import 'components/list';
 @import 'components/logo';
+@import 'components/side-nav';
 
 
 // SHAME
