--- a/src/html/components/buttons.hbs
+++ b/src/html/components/buttons.hbs
@@ -17,20 +17,20 @@ description: Buttons. You click on them. They do stuff.
 
   {{#embed "layouts/article" title="Default w/ Icon and Label"}}
   {{#content "body"}}
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Button</span>
     </button>
-    <a href="#" class="c-button">
+    <a href="#" class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Link</span>
     </a>
 
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Button</span>
     </button>
-    <a href="#" class="c-button">
+    <a href="#" class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Link</span>
     </a>
@@ -40,20 +40,20 @@ description: Buttons. You click on them. They do stuff.
 
   {{#embed "layouts/article" title="Default w/ Icon and w/o Label"}}
   {{#content "body"}}
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
-    <a href="#" class="c-button">
+    <a href="#" class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
 
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
-    <a href="#" class="c-button">
+    <a href="#" class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
@@ -72,20 +72,20 @@ description: Buttons. You click on them. They do stuff.
 
   {{#embed "layouts/article" title="Highlighted w/ Icon and Label"}}
   {{#content "body"}}
-    <button class="c-button c-button--highlight">
+    <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Button</span>
     </button>
-    <a href="#" class="c-button c-button--highlight">
+    <a href="#" class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Link</span>
     </a>
 
-    <button class="c-button c-button--highlight">
+    <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Button</span>
     </button>
-    <a href="#" class="c-button c-button--highlight">
+    <a href="#" class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Link</span>
     </a>
@@ -95,20 +95,20 @@ description: Buttons. You click on them. They do stuff.
 
   {{#embed "layouts/article" title="Highlighted w/ Icon and w/o Label"}}
   {{#content "body"}}
-    <button class="c-button c-button--highlight">
+    <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
-    <a href="#" class="c-button c-button--highlight">
+    <a href="#" class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
 
-    <button class="c-button c-button--highlight">
+    <button class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
-    <a href="#" class="c-button c-button--highlight">
+    <a href="#" class="c-button c-button--highlight c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
