--- a/src/html/partials/includes/action-bar-domain.hbs
+++ b/src/html/partials/includes/action-bar-domain.hbs
@@ -12,7 +12,7 @@
   </div>
 
   <div class="c-action-bar__group">
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#add"/></svg>
       <span class="c-button__text  u-sr-only-xs">New Domain</span>
     </button>
