--- a/src/html/partials/includes/action-bar-settings.hbs
+++ b/src/html/partials/includes/action-bar-settings.hbs
@@ -11,7 +11,7 @@
   </div>
 
   <div class="c-action-bar__group">
-    <button class="c-button">
+    <button class="c-button c-button--icon">
       <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#save"/></svg>
       <span class="c-button__text  u-sr-only-below-md">Save</span>
     </button>
