--- a/src/html/partials/includes/list-alias.hbs
+++ b/src/html/partials/includes/list-alias.hbs
@@ -18,17 +18,17 @@
 
   <div class="c-list__group c-list__group--actions  js-toggle-panel">
     <div class="c-list__action-group">
-      <input type="checkbox" id="active" checked class="c-form-choice c-form-choice--checkbox  c-list__checkbox">
+      <input type="checkbox" id="active" checked class="c-form-choice c-form-choice--checkbox">
       <label for="active">Aktiv</label>
     </div>
 
     <div class="c-list__action-group">
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#settings"/></svg>
         <span class="c-button__text u-sr-only-md">Settings</span>
       </button>
 
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#delete"/></svg>
         <span class="c-button__text u-sr-only-md">Delete</span>
       </button>
