--- a/src/html/partials/includes/list-domain.hbs
+++ b/src/html/partials/includes/list-domain.hbs
@@ -12,34 +12,34 @@
 
   <div class="c-list__group c-list__group--actions  js-toggle-panel">
     <div class="c-list__action-group">
-      <input type="checkbox" id="active" checked class="c-form-choice c-form-choice--checkbox  c-list__checkbox">
+      <input type="checkbox" id="active" checked class="c-form-choice c-form-choice--checkbox">
       <label for="active">Aktiv</label>
     </div>
 
     <div class="c-list__action-group">
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
         <span class="c-button__text u-sr-only-sm u-sr-only-md">Aliases</span>
       </button>
 
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
         <span class="c-button__text u-sr-only-sm u-sr-only-md">Mailing Lists</span>
       </button>
 
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#forward"/></svg>
         <span class="c-button__text u-sr-only-sm u-sr-only-md">Forwards</span>
       </button>
     </div>
 
     <div class="c-list__action-group">
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#settings"/></svg>
         <span class="c-button__text u-sr-only-sm u-sr-only-md u-sr-only-lg">Settings</span>
       </button>
 
-      <button class="c-button  c-list__button">
+      <button class="c-button c-button--icon">
         <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#delete"/></svg>
         <span class="c-button__text u-sr-only-sm u-sr-only-md u-sr-only-lg">Delete</span>
       </button>
