Add dropdown menu

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -60,6 +60,7 @@ Naming convention for CSS classes
 // COMPONENTS
 @import 'components/action-bar';
 @import 'components/box';
+@import 'components/dropdown';
 @import 'components/footer';
 @import 'components/list';
 @import 'components/logo';
