--- a/src/html/partials/includes/dropdown-icon-and-text.hbs
+++ b/src/html/partials/includes/dropdown-icon-and-text.hbs
@@ -11,3 +11,18 @@
     <p>Stuff within the dropdown menu.</p>
   </div>
 </div>
+
+
+<div class="c-dropdown  js-dropdown">
+  <button class="c-button c-button--icon  c-dropdown__button  js-toggle-button">
+    <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#account"/></svg>
+    <span class="c-button__text">Dropdown</span>
+    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+  </button>
+
+  <div class="c-dropdown__panel c-dropdown__panel--to-left  js-toggle-panel">
+    <p>Stuff within the dropdown menu.</p>
+    <p>Stuff within the dropdown menu.</p>
+    <p>Stuff within the dropdown menu.</p>
+  </div>
+</div>
