--- a/src/html/partials/includes/dropdown-text.hbs
+++ b/src/html/partials/includes/dropdown-text.hbs
@@ -10,3 +10,17 @@
     <p>Stuff within the dropdown menu.</p>
   </div>
 </div>
+
+
+<div class="c-dropdown  js-dropdown">
+  <button class="c-button  c-dropdown__button  js-toggle-button">
+    Dropdown
+    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+  </button>
+
+  <div class="c-dropdown__panel c-dropdown__panel--to-left  js-toggle-panel">
+    <p>Stuff within the dropdown menu.</p>
+    <p>Stuff within the dropdown menu.</p>
+    <p>Stuff within the dropdown menu.</p>
+  </div>
+</div>
