Add dropdown and form-autocomplete

--- a/src/html/components/dropdown.hbs
+++ b/src/html/components/dropdown.hbs
@@ -26,5 +26,12 @@ description: Click a button and an awesome menu pops up.
   {{/content}}
   {{/embed}}
 
+
+  {{#embed "layouts/article" title="Form Autocomplete"}}
+  {{#content "body"}}
+    {{> includes/form-autocomplete}}
+  {{/content}}
+  {{/embed}}
+
 {{/content}}
 {{/extend}}
