--- a/src/css/components/_action-bar.scss
+++ b/src/css/components/_action-bar.scss
@@ -6,6 +6,8 @@
 
 .c-action-bar {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 0.6rem;
 
   // Component size
@@ -20,6 +22,10 @@
   @media (min-width: $break-md-min) {
     height: 4em;
   }
+}
+
+.c-action-bar--dark {
+  background-color: $color-charcoal;
 }
 
 
