--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -62,6 +62,8 @@ Naming convention for CSS classes
 @import 'components/box';
 @import 'components/dropdown';
 @import 'components/footer';
+@import 'components/form-autocomplete';
+@import 'components/header';
 @import 'components/list';
 @import 'components/logo';
 @import 'components/side-nav';
